k8s-on-premise-cloud/versus/versus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versus-ingress
  namespace: versus
spec:
  ingressClassName: nginx
  rules:
    - host: versus.nhatanhmovie.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: versus-service
                port: 
                  number: 3000
